--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "dataquery"
 version = "0.1.0"
 description = "A package for simplified database operations with PostgreSQL and Pandas."
+readme = {file = "README.md", content-type = "text/markdown"}
 authors = [
     {name = "Praveen", email = "praveen.nitap@gmail.com"},
 ]
